<resources>
    <string name="app_name">TaskTwo_tk</string>
    <string name="save_entry">SAVE ENTRY</string>
    <string name="end_time">END TIME</string>
    <string name="end_date">END DATE</string>
    <string name="start_time">START TIME</string>
    <string name="start_date">START DATE</string>
    <string name="description">Description</string>
    <string name="igama_lakho">iGama Lakho</string>
    <string name="tk_s_timesheet_entry">TK\'s Timesheet Entry</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="register">REGISTER</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="login">LOGIN</string>
    <string name="not_registered_yet_register">Not Registered Yet? Register</string>
    <string name="view_records">VIEW RECORDS</string>
    <string name="adv_kamera">ADV Kamera</string>
    <string name="kamera">Kamera</string>
    <string name="choose_image">CHOOSE IMAGE</string>
    <string name="take_pic">TAKE PIC</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="title_activity_navigation_drawe_views">NavigationDraweViewsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_populates_spinner">User Populates Spinner</string>
    <string name="user_enter_category_here">User Enter Category here</string>
    <string name="save_user_entry">SAVE USER ENTRY</string>
    <string name="c2_choose_image">C2 - choose image</string>
    <string name="c2_upload_image">C2 - Upload image</string>
    <string name="c1_nrml_camera">C1 - NRML CAMERA</string>
    <string name="c2_take_pic">C2 - Take Pic</string>
    <string name="view_entries">VIEW ENTRIES</string>
    <string name="save">Save</string>
    <string name="enter_task_category">Enter Task Category</string>
    <string name="task_description">Task Description</string>
    <string name="new_timesheet_entry">New Timesheet Entry</string>
    <string name="task_name">Task Name</string>
    <string name="set_daily_goals">Set Daily Goals:</string>
    <string name="min_hours">Min. Hours</string>
    <string name="max_hours">Max. hours</string>
    <string name="start_date2">START DATE</string>
    <string name="end_date2">END DATE</string>
    <string name="start_time2">START TIME</string>
    <string name="end_time2">END TIME</string>
    <string name="save_entry2">SAVE ENTRY</string>
    <string name="todo">TODO</string>
</resources>