<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/colourgradientone"
    tools:context=".NewTaskEntry">


    <TextView
        android:id="@+id/tvNewTaskEntryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"

        android:text="@string/new_timesheet_entry"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#203354"
        android:fontFamily="tahoma"/>

    <EditText
        android:id="@+id/edTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="90dp"

        android:ems="10"
        android:hint="@string/task_name"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="LabelFor,VisualLintTextFieldSize"
        android:importantForAutofill="no"
        android:minHeight="40dp"/>

    <EditText
        android:id="@+id/edTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="145dp"

        android:ems="10"
        android:hint="@string/task_description"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="LabelFor,VisualLintTextFieldSize"
        android:importantForAutofill="no"
        android:minHeight="40dp"/>



    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/edTextViewCategory"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="195dp"

        android:ems="10"
        android:hint="@string/enter_task_category"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:minHeight="40dp"/>

    <Button
        android:id="@+id/btnSaveUserCategory"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="190dp"
        android:layout_marginStart="270dp"

        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/tvDailyGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginStart="50dp"
        android:minHeight="48dp"
        android:text="@string/set_daily_goals"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#203354"
        android:fontFamily="tahoma"/>

    <EditText
        android:id="@+id/edTvDailyMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginStart="170dp"
        android:minHeight="48dp"
        android:hint="@string/min_hours"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edTvDailyMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginStart="270dp"
        android:minHeight="48dp"
        android:hint="@string/max_hours"
        android:inputType="text"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="365dp"
        android:backgroundTint="@color/white"

        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/start_date2"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnEndDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="365dp"
        android:layout_marginStart="200dp"
        android:padding="8dp"

        android:text="@string/end_date2"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStartTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="415dp"
        android:backgroundTint="@color/white"

        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/start_time2"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnEndTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="415dp"
        android:layout_marginStart="200dp"
        android:padding="8dp"

        android:text="@string/end_time2"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnSaveEntry"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="660dp"
        android:layout_marginStart="80dp"
        android:padding="8dp"

        android:text="@string/save_entry2"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnViewEntries"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="660dp"
        android:backgroundTint="@color/white"

        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/view_entries"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />


    <ImageView
        android:id="@+id/imageViewCam2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="490dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />


    <Button
        android:id="@+id/btnCam2Choose"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="490dp"
        android:backgroundTint="@color/white"

        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/c2_choose_image"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />


    <Button
        android:id="@+id/btnCam2TakePic"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="540dp"
        android:layout_marginStart="50dp"
        android:padding="4dp"

        android:text="@string/c2_take_pic"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCam2UploadImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="590dp"
        android:backgroundTint="@color/white"

        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/c2_upload_image"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />


    <Button
        android:id="@+id/btnNrmlCamera"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/white"

        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/c1_nrml_camera"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />






</RelativeLayout>