<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tk_s_timesheet_entry"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/igama_lakho"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:importantForAutofill="no"
        android:minHeight="40dp"
        android:textSize="20sp"
        android:textColorHint="#546E7A"
        tools:ignore="LabelFor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:entries="@array/tk_spinner_items"
        tools:ignore="VisualLintBounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDescription"
        app:layout_constraintVertical_bias="0.069"/>

    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:text="@string/start_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.073"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnStartTime"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/start_time"
        tools:ignore="VisualLintBounds,TextSizeCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/btnStartDate"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.022"/>

    <Button
        android:id="@+id/btnEndDate"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/end_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartDate"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnEndTime"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toEndOf="@+id/btnEndDate"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTime"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="236dp"
        android:text="@string/save_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>