<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/colourgradientone"
    tools:context=".Login">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"

        android:gravity="center"
        android:text="@string/login"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="40sp"
        android:textColor="#203354"
        android:fontFamily="tahoma"/>


    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="180dp"

        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"

        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="250dp"

        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="428dp"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="450dp"

        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="18sp"

        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="549dp" />


    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginHorizontal="70dp"

        android:fontFamily="tahoma"
        android:gravity="center"
        android:text="@string/not_registered_yet_register"
        android:textColor="#203354"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="serif" />


</RelativeLayout>